# RealTimeAudioProcess

./: ArrayProcessSynthesis.kdev4  CMakeLists.txt  README.md
.kdev4/: ArrayProcessSynthesis.kdev4
